--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="nyhet">
-      
+      <img src="google.png" alt="Google">
       <div class="datumrubrik">
         <p class="datum">16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
