--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>FAANG news Sweden</title>
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+<meta name="viewport" content="width=device-width">
   </head>
   <body>
 
@@ -23,35 +24,35 @@
     <div class="nyhet">
       <img src="netflix.png" alt="Netflix">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
         <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
       </div>
     </div>
     <div class="nyhet">
       <img src="google.png" alt="Google">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
     </div>
   </div>
     <div class="nyhet">
       <img src="facebook.png" alt="Facebook">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
     </div>
   </div>
     <div class="nyhet">
       <img src="Amazon.png" alt="Amazon">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
     </div>
   </div>
     <div class="nyhet">
       <img src="apple.png" alt="apple">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
     </div>
   </div>
@@ -63,35 +64,35 @@
     <div class="nyhet">
       <img src="netflix.png" alt="Netflix">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
         <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
       </div>
     </div>
     <div class="nyhet">
       <img src="google.png" alt="Google">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
     </div>
   </div>
     <div class="nyhet">
       <img src="facebook.png" alt="Facebook">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
     </div>
   </div>
     <div class="nyhet">
       <img src="Amazon.png" alt="Amazon">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
     </div>
   </div>
     <div class="nyhet">
       <img src="apple.png" alt="apple">
       <div class="datumrubrik">
-        <p class="datum">16 januari</p>
+        <p class="datum">Financial Times, 16 januari</p>
       <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
     </div>
   </div>
@@ -107,39 +108,40 @@
 
     <div class="outer2">
 <!-- Facebook -->
+
       <div class="perforetag">
     <h4>Facebook</h4>
         <div class="nyhet">
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
@@ -150,35 +152,35 @@
         <h4>Apple</h4>
         <div class="nyhet">
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
@@ -190,35 +192,35 @@
         <h4>Amazon</h4>
         <div class="nyhet">
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
@@ -230,35 +232,35 @@
         <h4>Netflix</h4>
         <div class="nyhet">
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
         <div class="nyhet">
 
           <div class="datumrubrik">
-            <p class="datum">16 januari</p>
+            <p class="datum">Financial Times, 16 januari</p>
           <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
         </div>
       </div>
@@ -270,46 +272,44 @@
   <h4>Google</h4>
   <div class="nyhet">
     <div class="datumrubrik">
-      <p class="datum">16 januari</p>
+      <p class="datum">Financial Times, 16 januari</p>
+    <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
+  </div>
+</div>
+  <div class="nyhet">
+    <div class="datumrubrik">
+      <p class="datum">Financial Times, 16 januari</p>
     <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
   </div>
 </div>
   <div class="nyhet">
 
     <div class="datumrubrik">
-      <p class="datum">16 januari</p>
+      <p class="datum">Financial Times, 16 januari</p>
     <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
   </div>
 </div>
   <div class="nyhet">
 
     <div class="datumrubrik">
-      <p class="datum">16 januari</p>
+      <p class="datum">Financial Times, 16 januari</p>
     <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
   </div>
 </div>
   <div class="nyhet">
 
     <div class="datumrubrik">
-      <p class="datum">16 januari</p>
-    <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-  </div>
-</div>
-  <div class="nyhet">
-
-    <div class="datumrubrik">
-      <p class="datum">16 januari</p>
+      <p class="datum">Financial Times, 16 januari</p>
     <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
   </div>
 </div>
 </div>
 
-    </div class="outer">
-        <h4></h4>
+</div class="outer2">
 
 
-
-
+<div class="bottom">
+</div class="bottom">
 
 
 
