--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
 
   </div>
 
+<!-- Meny -->
+<div class="meny">
+
+  <div class="link">
+<a href="#Facebook">Facebook</a>
+  </div>
+
+  <div class="link">
+  <a href="#Apple">Apple</a>
+  </div>
+
+  <div class="link">
+<a href="#Amazon">Amazon</a>
+  </div>
+
+  <div class="link">
+<a href="#Netflix">Netflix</a>
+  </div>
+
+  <div class="link">
+<a href="#Google">Google</a>
+  </div>
+
+</div>
+
 <!-- Senaste dygnet och mest lästa -->
 
 <div class="outer">
@@ -110,7 +135,7 @@
 <!-- Facebook -->
 
       <div class="perforetag">
-    <h4>Facebook</h4>
+    <h4><a id="Facebook"></a>Facebook</h4>
         <div class="nyhet">
           <div class="datumrubrik">
             <p class="datum">Financial Times, 16 januari</p>
@@ -149,7 +174,7 @@
 
 <!-- Apple -->
       <div class="perforetag">
-        <h4>Apple</h4>
+        <h4><a id="Apple"></a>Apple</h4>
         <div class="nyhet">
           <div class="datumrubrik">
             <p class="datum">Financial Times, 16 januari</p>
@@ -189,7 +214,7 @@
 
 <!-- Amazon -->
       <div class="perforetag">
-        <h4>Amazon</h4>
+        <h4><a id="Amazon"></a>Amazon</h4>
         <div class="nyhet">
           <div class="datumrubrik">
             <p class="datum">Financial Times, 16 januari</p>
@@ -229,7 +254,7 @@
 
       <!-- Netflix -->
       <div class="perforetag">
-        <h4>Netflix</h4>
+        <h4><a id="Netflix"></a>Netflix</h4>
         <div class="nyhet">
           <div class="datumrubrik">
             <p class="datum">Financial Times, 16 januari</p>
@@ -269,7 +294,7 @@
 
 <!-- Google -->
 <div class="perforetag">
-  <h4>Google</h4>
+  <h4><a id="Google"></a>Google</h4>
   <div class="nyhet">
     <div class="datumrubrik">
       <p class="datum">Financial Times, 16 januari</p>
