--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>FAANG news Sweden</title>
-    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+
+<!-- Viewporten gör att @media funkar och blir responsivt -->
 <meta name="viewport" content="width=device-width">
   </head>
   <body>
 
+
+<!-- Div med header i (bild + rubrik) -->
   <div class="header">
     <img src="header2.png" alt="FAANG">
     <h1>FAANG-nyheter med koppling till Sverige</h1>
@@ -337,9 +342,7 @@
 </div class="bottom">
 
 
-
-
-
+<script src="script.js"> </script>
 
   </body>
 </html>
