--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Div med header i (bild + rubrik) -->
   <div class="header">
     <img src="header2.png" alt="FAANG">
-    <h1>FAANG-nyheter med koppling till Sverige</h1>
+    <h1>FAANG-nyheter med massor med koppling till Sverige</h1>
 
   </div>
 
