--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Div med header i (bild + rubrik) -->
   <div class="header">
     <img src="header2.png" alt="FAANG">
-    <h1>FAANG-nyheter med massor med koppling till Sverige</h1>
+    <h1>Nyheter om FAANG-bolagen</h1>
 
   </div>
 
@@ -51,84 +51,17 @@
 
   <div class="senaste">
 <h3>Senaste nyheterna</h3>
-    <div class="nyhet">
-      <img src="netflix.png" alt="Netflix">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-        <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-      </div>
-    </div>
-    <div class="nyhet">
-      <img src="google.png" alt="Google">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-      <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-    </div>
-  </div>
-    <div class="nyhet">
-      <img src="facebook.png" alt="Facebook">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-      <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-    </div>
-  </div>
-    <div class="nyhet">
-      <img src="Amazon.png" alt="Amazon">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-      <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-    </div>
-  </div>
-    <div class="nyhet">
-      <img src="apple.png" alt="apple">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-      <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-    </div>
-  </div>
-  </div>
+<div class="allNews"></div>
+</div>
+
 
 
   <div class="senaste">
 <h3>Mest lästa senaste veckan</h3>
-    <div class="nyhet">
-      <img src="netflix.png" alt="Netflix">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-        <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-      </div>
-    </div>
-    <div class="nyhet">
-      <img src="google.png" alt="Google">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-      <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-    </div>
-  </div>
-    <div class="nyhet">
-      <img src="facebook.png" alt="Facebook">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-      <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-    </div>
-  </div>
-    <div class="nyhet">
-      <img src="Amazon.png" alt="Amazon">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-      <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-    </div>
-  </div>
-    <div class="nyhet">
-      <img src="apple.png" alt="apple">
-      <div class="datumrubrik">
-        <p class="datum">Financial Times, 16 januari</p>
-      <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-    </div>
-  </div>
-  </div>
-</div class="outer">
-    <h3></h3>
+<div class="mestNews"></div>
+</div>
+</div>
+
 
 
 
@@ -138,202 +71,35 @@
 
     <div class="outer2">
 <!-- Facebook -->
-
-      <div class="perforetag">
-    <h4><a id="Facebook"></a>Facebook</h4>
-        <div class="nyhet">
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-      </div>
+    <div class="perforetag">
+      <h4><a id="Facebook"></a>Facebook</h4>
+      <div class="faceNews"></div>
+    </div>
 
 <!-- Apple -->
-      <div class="perforetag">
-        <h4><a id="Apple"></a>Apple</h4>
-        <div class="nyhet">
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-      </div>
-
+    <div class="perforetag">
+      <h4><a id="Apple"></a>Apple</h4>
+      <div class="appleNews"></div>
+    </div>
 
 <!-- Amazon -->
       <div class="perforetag">
         <h4><a id="Amazon"></a>Amazon</h4>
-        <div class="nyhet">
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
+        <div class="amazonNews"></div>
       </div>
 
-
-      <!-- Netflix -->
+<!-- Netflix -->
       <div class="perforetag">
         <h4><a id="Netflix"></a>Netflix</h4>
-        <div class="nyhet">
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
+        <div class="netflixNews"></div>
       </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-        <div class="nyhet">
-
-          <div class="datumrubrik">
-            <p class="datum">Financial Times, 16 januari</p>
-          <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-        </div>
-      </div>
-      </div>
-
 
 <!-- Google -->
-<div class="perforetag">
-  <h4><a id="Google"></a>Google</h4>
-  <div class="nyhet">
-    <div class="datumrubrik">
-      <p class="datum">Financial Times, 16 januari</p>
-    <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-  </div>
-</div>
-  <div class="nyhet">
-    <div class="datumrubrik">
-      <p class="datum">Financial Times, 16 januari</p>
-    <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-  </div>
-</div>
-  <div class="nyhet">
+      <div class="perforetag">
+        <h4><a id="Google"></a>Google</h4>
+        <div class="googleNews"></div>
+      </div>
 
-    <div class="datumrubrik">
-      <p class="datum">Financial Times, 16 januari</p>
-    <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-  </div>
-</div>
-  <div class="nyhet">
-
-    <div class="datumrubrik">
-      <p class="datum">Financial Times, 16 januari</p>
-    <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-  </div>
-</div>
-  <div class="nyhet">
-
-    <div class="datumrubrik">
-      <p class="datum">Financial Times, 16 januari</p>
-    <p>Doggo ipsum shoober clouds doggorino borking doggo dat tungg tho</p>
-  </div>
-</div>
-</div>
 
 </div class="outer2">
 
@@ -341,7 +107,7 @@
 <div class="bottom">
 </div class="bottom">
 
-
+<script src="moment.js"> </script>
 <script src="script.js"> </script>
 
   </body>
